--- a/.stylelintrc
+++ b/.stylelintrc
@@ -13,6 +13,8 @@
     "function-parentheses-space-inside": null,
     "no-descending-specificity": null,
     "max-nesting-depth": 2,
-    "selector-max-id": 1
+    "selector-max-id": 1,
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": true
   }
 }
